# attribution-metadata

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: api-check.yaml  check.yaml  deploy.yaml  web-check.yaml  web-deploy.yaml
api/: .gitignore  Cargo.toml  README.md  build.rs
api/src/: attribution.rs  macros.rs  main.rs  result.rs
misc/: header.txt
src/: attribution.rs  error.rs  handler.rs  handlers.rs  macros.rs  main.rs  object.rs  password.rs  utils.rs
web/: .gitignore  README.md  editor.css  editor.js  index.html  package-lock.json  package.json  tsconfig.json
web/src/: app.tsx  index.tsx  styles.css
web/src/components/: attributions-input-row.tsx  attributions-input.tsx  wikidot-id-input.tsx
web/src/pages/: attribution-metadata.tsx  update-password.tsx
web/src/util/: attributions-api.ts  crom-api.ts  i18n.ts
