[package]
name = "attribution-metadata"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "0.28"
lambda_http = "0.8"
lambda_runtime = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str-macro = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
