[package]
name = "attribution-metadata"
version = "0.1.1"
edition = "2021"

[dependencies]
aws-config = "0.55"
aws-sdk-dynamodb = "0.28"
color-backtrace = "0.5"
http = "0.2"
maplit = "1"
once_cell = "1"
lambda_http = "0.8"
lambda_runtime = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str-macro = "1"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[build-dependencies]
built = "0.6"
